Fix how top bar looks on IE

--- a/_sass/default.sass
+++ b/_sass/default.sass
@@ -131,7 +131,6 @@ blockquote
   background-image: -o-linear-gradient(top, $background, $background)
   background-image: linear-gradient(top, $background, $background)
   background-repeat: repeat-x
-  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='$background',  endColorstr='$background',  GradientType=0)
   -webkit-border-radius: 4px
   -moz-border-radius: 4px
   border-radius: 4px
